# Crazyflie-FPV-Tracking

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: .gitignore  constants.py  create_dataset.py  get_data.py  images_get_data.py  prepare_yolo_dataset.py  record_video.py  track_label_video.py  train_yolo.py  upload_data_drive.py  utils.py  videos_get_data.py  view_labeling.py
demos/: README.md
depth_estimation/: README.md  __init__.py  constants.py  depth_image_inference.py  depth_video_inference.py  live_depth_estimation.py  live_depth_review.py  pipeline_base.py  utils.py
drone_control/: .gitignore  README.md  constants.py  main.py  start_drone.py
flight_vision/: README.md  __init__.py  app.py  camera_sources.py  constants.py  main.py  vision_runtime.py
inference/: constants.py  live_inference.py  session_inference_review.py  utils.py
models/: compare_models.py  constants.py  random_test_preview.py  test_yolo.py  train_yolo.py  utils.py
scripts/: README.md  _common.sh  camera_calibration.sh  camera_stress_tests.sh  capture_images.sh  capture_video.sh  compare_models.sh  create_dataset.sh  depth_image.sh  depth_video.sh  drone_control.sh  drone_follower_demo.sh  flight_vision.sh  label_video.sh  live_depth.sh  live_depth_review.sh  live_inference.sh  live_view.sh  midas_image.sh  midas_video.sh  naive_bbox_depth.sh  prepare_yolo_dataset.sh  random_test_preview.sh  review_labels.sh  run_tests.sh  session_inference_review.sh  session_naive_depth_review.sh  test_yolo.sh  train_yolo.sh  unidepth_video.sh  upload_backup.sh
setting_up/: get_visual.py
setting_up_camera/: .gitignore  README.md  get_visual.py
tests/: test_depth_utils.py  test_integration_models.py  test_integration_prepare_yolo_dataset.py  test_system_scripts.py
(+66 files in other folders)
